--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,10 @@ body {
     @apply absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform;
   }
 
+  .absolute-y-center {
+    @apply absolute top-1/2 -translate-y-1/2;
+  }
+
   .transition-default {
     @apply transition-all duration-300 ease-in-out;
   }
